--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,13 +2,13 @@
 ---
 
 // Colors
-$primary: #e5261f;
-$primary-dark: #a01b16;
-$secondary: #f88379;
+$primary: #5F35F9;
+$primary-dark: #5F35F9;
+$secondary: #A732DB;
 $black: #2f2f41;
 $white: #ffffff;
-$white-offset: #fff6f8;
-$steel: #5c5a5a;
+$white-offset: #A631DC;
+$steel: #666666;
 
 // Links
 $link-color: $primary;
