--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,3 +70,14 @@ body {
     line-height: 1.3;
   }
 }
+
+.ebay-box {
+  width: auto;
+  align-content: center;
+  text-align: center;
+}
+.ebay-link {
+  width: 120px;
+  height: 120px;
+  text-align: center;
+}
