--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -1,5 +1,6 @@
 .logo {
   display: none;
+  padding: 10px 0 10px 0;
   @include media-breakpoint-up(sm) {
     display: block;
   }
@@ -14,7 +15,7 @@
 }
 .logo-mobile {
   display: block;
-  width: 40px;
+  width: 97px;
   padding: 10px 0 10px 0;
   @include media-breakpoint-up(sm) {
     display: none;
