--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,15 @@
   <meta charset="utf-8">
   <title>{% if page.title %}{{page.title}} | {{ site.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <link rel="apple-touch-icon" sizes="76x76" href="{{ '/apple-touch-icon.png' | relative_url }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | relative_url }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | relative_url }}">
   <link rel="manifest" href="{{ '/site.webmanifest' | relative_url }}">
-  <link rel="mask-icon" href="{{ '/safari-pinned-tab.svg' | relative_url }}" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
+  <link rel="mask-icon" href="{{ '/safari-pinned-tab.svg' | relative_url }}" color="#5E34F6">
+  <meta name="apple-mobile-web-app-title" content="Schmuck today">
+  <meta name="application-name" content="Schmuck today">
+  <meta name="msapplication-TileColor" content="#5e34f6">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Google Fonts CDN -->
