--- a/_includes/ebay.html
+++ b/_includes/ebay.html
@@ -1,3 +1,3 @@
 <div class="ebay-box">
-  <a href="https://www.ebay.de/usr/schmucktoday"><img src="/images/social/ebay.svg" class="ebay-link" /></a>
+  <a href="https://www.ebay.de/usr/schmucktoday"><img src="/images/social/ebay.svg" alt="zum eBay Shop von Schmuck today" class="ebay-link" /></a>
 </div>
